--- a/src/main/resources/templates/global-stock-etat.html
+++ b/src/main/resources/templates/global-stock-etat.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Liste Des Responsables - Application Materiel</title>
+    <title>Etat Global - Application Materiel</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -49,7 +49,7 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Article</h1>
+        <h1>Etat Stock</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">Acceuil</li>
