--- a/src/main/resources/templates/mouvement-search.html
+++ b/src/main/resources/templates/mouvement-search.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Etat Global - Application Materiel</title>
+    <title>Liste Des Articles - Application Materiel</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -28,14 +28,9 @@
 
     <!-- Template Main CSS File -->
     <link href="/assets/css/style.css" rel="stylesheet">
-
-    <!-- =======================================================
-    * Template Name: NiceAdmin
-    * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-    * Updated: Apr 20 2024 with Bootstrap v5.3.3
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 
 <body>
@@ -49,11 +44,11 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Etat Stock</h1>
+        <h1>Mouvements</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">Acceuil</li>
-                <li class="breadcrumb-item active">Etat Global</li>
+                <li class="breadcrumb-item active">Mouvements Par Dates</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -61,37 +56,65 @@
     <section class="section">
         <div class="row">
             <div class="col-lg-12">
-
                 <div class="card">
+
                     <div class="card-body">
-                        <h5 class="card-title">Etat Global Du Stock</h5>
-                        <table class="table table-bordered">
+                        <div class="container mt-5">
+                        <form th:action="@{/mouvement/search}" method="post">
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label">Date Début:</label>
+                                <div class="col-sm-4">
+                                    <input type="date" name="startDate" required class="form-control">
+                                </div>
+
+                                <label class="col-sm-2 col-form-label">Date Fin:</label>
+                                <div class="col-sm-4">
+                                    <input type="date" name="endDate" required class="form-control">
+                                </div>
+                            </div>
+
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Filtrer</button>
+                            </div>
+                        </form>
+                        </div>
+                        <table class="table table-striped">
                             <thead>
                             <tr>
-                                <th class="text-center">Type Materiel</th>
-                                <th class="text-center">Quantité Total</th>
-                                <th class="text-center">Qté Disponible</th>
-                                <th class="text-center">Qté Indisponible</th>
+                                <th scope="col">Désignation</th>
+                                <th scope="col">Type</th>
+                                <th scope="col">N°Serie</th>
+                                <th scope="col">Position</th>
+                                <th scope="col">Date Sortie</th>
+                                <th scope="col">Date Entree</th>
+                                <th scope="col">Observation</th>
+                                <th scope="col">Status</th>
+
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="summary : ${typeSummary}">
-                                <td class="text-center" th:text="${summary.type}" ></td>
-                                <td class="text-center" th:text="${summary.quantity}"></td>
-                                <td class="text-center">
-                                    <!-- Link for Disponible items -->
-                                    <a th:href="@{/stocks/etat(type=${summary.type},status='DISPONIBLE')}" th:text="${summary.disponibleCount}"></a>
+                            <tr th:each="mouvement : ${mouvements}">
+                                <td th:text="${mouvement.stock.designation}"></td>
+                                <td th:text="${mouvement.stock.type.libelle}"></td>
+                                <td th:text="${mouvement.stock.nserie}"></td>
+                                <td th:text="${mouvement.position.libelle}"></td>
+                                <td th:text="${#dates.format(mouvement.datee, 'yyyy-MM-dd')}"></td>
+                                <td th:text="${#dates.format(mouvement.dateentree, 'yyyy-MM-dd')}"></td>
+                                <td th:text="${mouvement.observation}"></td>
+
+                                <td th:if="${mouvement.dateentree == null}">
+                                    <span class="badge bg-danger">INDISPONIBLE</span>
                                 </td>
-                                <td class="text-center">
-                                    <!-- Link for Indisponible items -->
-                                    <a th:href="@{/stocks/etat(type=${summary.type},status='INDISPONIBLE')}" th:text="${summary.indisponibleCount}"></a>
+                                <td th:if="${mouvement.dateentree != null}">
+                                    <span class="badge bg-success">DISPONIBLE</span>
                                 </td>
+
                             </tr>
                             </tbody>
                         </table>
+
                     </div>
                 </div>
-
 
             </div>
         </div>
@@ -117,6 +140,8 @@
 
 <!-- Template Main JS File -->
 <script src="/assets/js/main.js"></script>
+
+
 
 </body>
 
