--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -116,8 +116,8 @@
                 <div class="card-body">
                   <h5 class="card-title">Total Licences</h5>
                   <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center bg-info-subtle">
-                      <i class="bi bi-key-fill text-info"></i>
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center bg-success-subtle">
+                      <i class="bi bi-key-fill text-success"></i>
                     </div>
                     <div class="ps-3">
                       <h6 th:text="${totalLicences}"></h6>
