--- a/src/main/resources/templates/licence-list.html
+++ b/src/main/resources/templates/licence-list.html
@@ -56,6 +56,11 @@
     <section class="section">
         <div class="row">
             <div class="col-lg-12">
+                <div th:if="${successMessage}" class="alert alert-success alert-dismissible fade show" role="alert">
+                    <i class="bi bi-check-circle me-1"></i>
+                    <span th:text="${successMessage}"></span>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
                 <div class="card">
 
                     <div class="card-body">
@@ -99,7 +104,7 @@
                                              th:aria-valuenow="${licence.progress}"
                                              aria-valuemin="0"
                                              aria-valuemax="100">
-                                            <span th:text="${licence.progress + '%'}"></span> &lt;!&ndash; Show percentage text inside the bar &ndash;&gt;
+                                            <span th:text="${licence.progress + '%'}"></span>
                                         </div>
                                     </div>
                                 </td>
