new server fixed, new vm not yet

--- a/src/main/resources/templates/ressource-lan.html
+++ b/src/main/resources/templates/ressource-lan.html
@@ -126,6 +126,7 @@
 
 
                     <div class="card-body">
+                        <a href="/serveurs/internet" class="card-button">
                         <div class="card card-lan shadow text-center" id="internet-card">
                             <div class="lan-card-header">
                                 <h5 class="card-title">Résaux Internet</h5>
@@ -133,10 +134,12 @@
                             <div class="lan-card-body">
                                 <i class="bi bi-globe"></i>
                                 <p class="card-text">Accès Internet, Serveurs, VMs.</p>
-                                <a href="/serveurs/INTERNET" class="btn btn-primary card-button">Sélectionner</a>
+                            </div>
+                            <div class="lan-card-header bg-white">
+
                             </div>
                         </div>
-
+                        </a>
                     </div>
 
 
@@ -146,17 +149,20 @@
 
 
                     <div class="card-body">
+                        <a href="/serveurs/intranet" class="card-button">
                         <div class="card card-lan shadow text-center" id="intranet-card">
                             <div class="lan-card-header">
                                 <h5 class="card-title">Résaux Intranet</h5>
                             </div>
                             <div class="lan-card-body">
-                                <i class="bi bi-house-door"></i>
+                                <i class="bi bi-building-fill"></i>
                                 <p class="card-text">Accès aux ressources internes, Serveurs, VMs.</p>
-                                <a href="/serveurs/INTRANET" class="btn btn-primary card-button">Sélectionner</a>
+                            </div>
+                            <div class="lan-card-header bg-white">
+
                             </div>
                         </div>
-
+                        </a>
                     </div>
 
 
