--- a/src/main/resources/templates/serveurs.html
+++ b/src/main/resources/templates/serveurs.html
@@ -43,41 +43,47 @@
 <div th:replace="shared/sidebar :: sidebar"></div>
 
 <main id="main" class="main">
-    <div class="pagetitle">
-        <h1>Serveurs du Réseau: <span th:text="${resaux}"></span></h1>
-        <nav>
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">Accueil</li>
-                <li class="breadcrumb-item active" th:text="${resaux}"></li>
-            </ol>
-        </nav>
-    </div><!-- End Page Title -->
+    <div class="pagetitle d-flex justify-content-between align-items-center">
+        <div>
+            <h1>Serveurs du Réseau: <span th:text="${resaux}"></span></h1>
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">Accueil</li>
+                    <li class="breadcrumb-item active" th:text="${resaux}"></li>
+                </ol>
+            </nav>
+        </div>
+
+        <a href="/serveur/add" class="btn btn-primary" role="button">
+            <i class="bi bi-database-add"></i>
+        </a>
+    </div>
 
     <section class="section">
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4" th:each="serveur : ${serveurs}">
-                <div class="card card-server shadow">
-                    <div class="card-header server-card-header">
-                        <h5 class="card-title server-name text-center" th:text="${serveur.nom}"></h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="server-info mb-3">
-                            <p><i class="bi bi-house-door"></i> Adresse IP: <span th:text="${serveur.adresseip}"></span></p>
-                            <p><i class="bi bi-cpu"></i> CPU: <span th:text="${serveur.cpu}"></span></p>
-                            <p><i class="bi bi-memory"></i> RAM: <span th:text="${serveur.ram}"></span></p>
-                            <p><i class="bi bi-hdd"></i> Stockage: <span th:text="${serveur.stockage}"></span></p>
-                            <p><i class="bi bi-server"></i> Hyperviseur: <span th:text="${serveur.hyperviseur}"></span></p>
-                            <p><i class="bi bi-key"></i> N°Serie: <span th:text="${serveur.nserie}"></span></p>
-
+                <a th:href="@{/serveurs/details/{id}(id=${serveur.id})}">
+                    <div class="card card-server shadow">
+                        <div class="card-header server-card-header">
+                            <h5 class="card-title server-name text-center" th:text="${serveur.nom}"></h5>
                         </div>
-                        <a th:href="@{/serveurs/details/{id}(id=${serveur.id})}" class="btn btn-primary">Voir Détails</a>
+                        <div class="card-body">
+                            <div class="server-info mb-3">
+                                <p><i class="bi bi-house-door"></i> Adresse IP: <span th:text="${serveur.adresseip}"></span></p>
+                                <p><i class="bi bi-cpu"></i> CPU: <span th:text="${serveur.cpu}"></span></p>
+                                <p><i class="bi bi-memory"></i> RAM: <span th:text="${serveur.ram}"></span></p>
+                                <p><i class="bi bi-hdd"></i> Stockage: <span th:text="${serveur.stockage}"></span></p>
+                                <p><i class="bi bi-database"></i> Hyperviseur: <span th:text="${serveur.hyperviseur}"></span></p>
+                                <p><i class="bi bi-key"></i> N°Serie: <span th:text="${serveur.nserie}"></span></p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
-
     </section>
 </main><!-- End #main -->
+
 
 <!-- ======= Footer ======= -->
 <div th:replace="shared/footer :: footer"></div>
