--- a/src/main/resources/templates/serveurs.html
+++ b/src/main/resources/templates/serveurs.html
@@ -64,7 +64,7 @@
             <div class="col-lg-4 col-md-6 mb-4" th:each="serveur : ${serveurs}">
                 <a th:href="@{/serveurs/details/{id}(id=${serveur.id})}">
                     <div class="card card-server shadow">
-                        <div class="card-header server-card-header">
+                        <div class="card-header server-card-header d-flex justify-content-between align-items-center">
                             <h5 class="card-title server-name text-center" th:text="${serveur.nom}"></h5>
                         </div>
                         <div class="card-body">
@@ -77,9 +77,11 @@
                                 <p><i class="bi bi-key"></i> N°Serie: <span th:text="${serveur.nserie}"></span></p>
                             </div>
                         </div>
+
                     </div>
                 </a>
             </div>
+
         </div>
     </section>
 </main><!-- End #main -->
