--- a/src/main/resources/templates/vm-add.html
+++ b/src/main/resources/templates/vm-add.html
@@ -128,7 +128,7 @@
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" id="os" name="os" placeholder="Système d'exploitation" required>
-                                    <label for="os">Système d'<exploitation></exploitation></label>
+                                    <label for="os">Système Exploitation</label>
                                 </div>
                             </div>
 
