--- a/src/main/resources/templates/serveur-details.html
+++ b/src/main/resources/templates/serveur-details.html
@@ -45,6 +45,11 @@
       <span th:text="${editMessage}"></span>
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
+    <div th:if="${addMessage}" class="alert alert-success alert-dismissible fade show" role="alert">
+      <i class="bi bi-check-circle me-1"></i>
+      <span th:text="${addMessage}"></span>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Informations du Serveur</h5>
@@ -64,8 +69,8 @@
 
         <div th:unless="${#lists.isEmpty(virtualMachines)}">
           <div class="row g-3">
-            <div th:each="vm : ${virtualMachines}" class="col-lg-6 col-md-12">
-              <div class="card mb-3">
+            <div th:each="vm : ${virtualMachines}" class="col-lg-6 col-md-12 ">
+              <div class="card mb-3" th:classappend="${!vm.status} ? 'bg-danger-light'">
                 <div class="row g-0">
                   <div class="col-md-4 align-content-center">
                     <img src="/assets/img/vms.png" class="img-fluid rounded-start" alt="...">
@@ -73,9 +78,6 @@
                   <div class="col-md-8">
                     <div class="card-body d-flex justify-content-between align-items-center">
                       <h5 class="card-title" th:text="${vm.designation}"></h5>
-                      <!--<a href="#" class="btn btn-primary" role="button">
-                        <i class="bi bi-graph-up"></i>
-                      </a>-->
                     </div>
                     <p><i class="bi bi-house-door"></i> Vm IP : <span th:text="${vm?.adresseip}"></span></p>
                     <p><i class="bi bi-cpu"></i> CPU : <span th:text="${vm?.cpu}"></span></p>
