--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -11,7 +11,8 @@
     </div>
     <div>
         <label for="adressip">IP Address:</label>
-        <input type="text" id="adressip" th:field="*{adressip}" required>
+        <input type="text" id="adressip" th:field="*{adressip}" pattern="^((25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)\.){3}(25[0-5]|2[0-4][0-9]|[0-1]?[0-9][0-9]?)$"
+               title="Please enter a valid IP address." required>
         <div th:if="${#fields.hasErrors('adressip')}" th:errors="*{adressip}"></div>
     </div>
     <div>
